<resources>
  <string name="app_name" translatable="false">Stock Hawk</string>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test"> Search for Stock Symbol</string>
  <string name="input_hint" translatable="false">FB</string>
  <string name="input_prefill" translatable="false"></string>
  <string name="widget_title">Today\'s Market</string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="not_connected">"Seems like you are not connected to internet.\n Please check your network settings!"</string>
  <string name="fab_btn_description">Search Stock by name </string>
  <string name="monthly_chart_header">Past 30 days</string>
  <string name="sixty_chart_header">Past 60 days</string>
  <string name="weekly_chart_header">Current Week</string>
  <string name="no_weekly_data">Sorry week has just started.\nNo data for current week!</string>
  <string name="no_data">Oops!!Server didn\'t returned anything!</string>
  <string name="week_started">Sorry,the week has just started.\nNo data for current week!</string>
  <string name="no_historical_data">Sorry,no historical data\navailable for this stock</string>
  <string name="retry_button_txt">RETRY</string>
  <string name="year_high_txt">Year High</string>
  <string name="year_low_txt">Year Low</string>
  <string name="market_value_txt">Total Market Capitalization</string>
  <string name="stock_already_saved">This stock is already saved!</string>
  <string name="invalid_stock_name">No stock found by that name</string>
  <string name="server_busy">Server seems to be busy.\nPlease try again after some time!</string>
  <string name="no_stocks">No stocks added in the list.\n\t\tStart adding stocks! :)</string>
  <string name="fetching_error">Error occurred while fetching data.
Please try again!</string>
  <string name="stock_detail_fetch_error">Error occurred while gathering\ndata to plot graph.\nPlease check your network connection\nAnd re-launch this screen again!</string>

  <string-array name="intervals">
    <item>5 minutes</item>
    <item>15 minutes(Default)</item>
    <item>30 minutes</item>
    <item>1 hour</item>
  </string-array>

  <!--String values for content_desc -->
  <string name="desc_fab">Search stock by symbol</string>
  <string name="desc_no_internet">Retry connection</string>

  <!--Interval settings dialog related strings -->
  <string name="interval_dialog_title">Choose Refresh Interval</string>
  <string name="interval_positive_txt">OK</string>
</resources>
