<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <include
            layout="@layout/stock_detail_toolbar"
            android:id="@+id/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/stock_detail_error_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_connected"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/error_txt_top_margin"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"/>
            <Button
                android:id="@+id/stock_detail_retry_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/retry_btn_margin"
                android:text="@string/retry_button_txt"
                android:background="@color/material_green_700"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"
                android:contentDescription="@string/desc_no_internet"/>
            <android.support.v7.widget.CardView
                android:id="@+id/weekly_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/weekly_card_height"
                android:layout_margin="@dimen/cards_margin"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/charts_cardcorner_radius"
                app:cardBackgroundColor="@color/weekly_card_background">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/weekly_bar_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|top"
                        android:layout_margin="@dimen/chart_margin"
                        android:visibility="invisible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:text="@string/weekly_chart_header"
                        android:layout_margin="@dimen/chart_title_margin"
                        android:drawableLeft="@drawable/point_green"
                        android:drawableStart="@drawable/point_green"
                        android:drawablePadding="@dimen/drawablePadding"
                        style="@style/ChartTitleTextStyle"/>
                    <TextView
                        android:id="@+id/no_weekly_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_weekly_data"
                        style="@style/NoDataTextStyle"
                        android:visibility="invisible"
                        tools:visibility="visible"
                        tools:text="No Data"/>
                    <ProgressBar
                        android:id="@+id/weekly_progressbar"
                        android:layout_width="@dimen/progress_bar_circular_size"
                        android:layout_height="@dimen/progress_bar_circular_size"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.ProgressBar"
                        tools:visibility="visible"/>

                </FrameLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/monthly_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/monthly_card_height"
                app:cardCornerRadius="@dimen/charts_cardcorner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_margin="@dimen/cards_margin"
                app:cardBackgroundColor="@color/monthly_card_background">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.db.chart.view.LineChartView
                        android:id="@+id/monthly_line_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|top"
                        android:layout_margin="@dimen/chart_margin"
                        app:chart_axisColor="#30547d99"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:text="@string/monthly_chart_header"
                        android:layout_margin="@dimen/chart_title_margin"
                        android:drawableLeft="@drawable/point_yellow"
                        android:drawableStart="@drawable/point_yellow"
                        android:drawablePadding="@dimen/drawablePadding"
                        style="@style/ChartTitleTextStyle"/>
                    <TextView
                        android:id="@+id/no_monthly_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_data"
                        style="@style/NoDataTextStyle"
                        android:visibility="invisible"
                        tools:visibility="visible"
                        tools:text="No Monthly data"/>
                    <ProgressBar
                        android:id="@+id/monthly_progressbar"
                        android:layout_width="@dimen/progress_bar_circular_size"
                        android:layout_height="@dimen/progress_bar_circular_size"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.ProgressBar"
                        tools:visibility="visible"/>
                </FrameLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/sixty_days_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/monthly_card_height"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/charts_cardcorner_radius"
                android:layout_margin="@dimen/cards_margin"
                app:cardBackgroundColor="@color/sixty_days_card_background">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.db.chart.view.LineChartView
                        android:id="@+id/sixty_days_line_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|top"
                        android:layout_margin="@dimen/chart_margin"
                        app:chart_axisColor="#30547d99"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:text="@string/sixty_chart_header"
                        android:layout_margin="@dimen/chart_title_margin"
                        android:drawableLeft="@drawable/point_red"
                        android:drawableStart="@drawable/point_red"
                        android:drawablePadding="@dimen/drawablePadding"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/no_sixty_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_data"
                        style="@style/NoDataTextStyle"
                        android:visibility="invisible"
                        tools:visibility="visible"
                        tools:text="No Sixty days data"/>
                    <ProgressBar
                        android:id="@+id/sixty_progressbar"
                        android:layout_width="@dimen/progress_bar_circular_size"
                        android:layout_height="@dimen/progress_bar_circular_size"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.ProgressBar"
                        tools:visibility="visible"/>

                </FrameLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>